[tool.poetry]
name = "leeplate"
version = "0.1.0"
description = "A privacy-oriented alternative frontend for translation providers."
authors = ["Nachtalb <na@nachtalb.io>"]
license = "LGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.0"}
gtts = "^2.3.1"
uvicorn = "^0.21.1"
googletrans-py = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = {extras = ["black"], version = "^8.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
leeplate = "leeplate:run"
